--- a/views/home.html
+++ b/views/home.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <h1>The Food Page</h1>
+<img src="images/food.jpg" alt="food image">
 
 <!-- Optional JavaScript; choose one of the two! -->
 
